# pseudo-rhythm-game

./: .gitignore  Cargo.toml  flake.nix  index.html  pseudo-rhythm-game.js  pseudo-rhythm-game.wasm
.github/workflows/: pages.yml
assets/: Korg_X5_Drums.txt  config.json
assets/shaders/: arc.glsl  color.glsl  grid.glsl
design/: Action Effect.md  Effect.md  Idea.md  Item.md  Moore neighborhood.md  Von Neumann neighborhood.md
src/: assets.rs  beat_controller.rs  collection.rs  config.rs  id.rs  main.rs  music_controller.rs  sound_queue.rs  state.rs  synthesize.rs  util.rs
src/game/: draw.rs  mod.rs
src/sound/: beat_controller.rs  config.rs  mod.rs  music_controller.rs  sound_queue.rs  synthesize.rs
src/sound/source/: beat.rs  mod.rs  raw.rs
src/util/: mod.rs  report.rs
src/world/: action.rs  action_effect.rs  component.rs  condition.rs  context.rs  effect.rs  entity.rs  grid.rs  health.rs  item.rs  logic.rs  mod.rs  player.rs  projectile.rs  target.rs  unit.rs
src/world/logic/: mod.rs  particles.rs  projectiles.rs  units.rs  util.rs
src/world/unit/: behaviour.rs  mod.rs
