[package]
name = "pseudo-rhythm-game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
geng = { git = "https://github.com/Nertsal/geng", branch = "source" }
rodio = { git = "https://github.com/kuviman/rodio", branch = "mp3-duration" }
serde = { version = "1.0.156", features = ["derive"] }
rustysynth = "0.9.0"
